<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.kotlin30days.view.login.viewmodel.LoginViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.97" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firebase_authentication_login"
            app:layout_constraintStart_toStartOf="@id/guidelineS"
            app:layout_constraintEnd_toEndOf="@id/guidelineE"
            app:layout_constraintTop_toTopOf="@id/guidelineT"
            android:textSize="@dimen/_17sp"
            android:fontFamily="sans-serif-black"
            android:padding="@dimen/_10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/_16dp"
            android:id="@+id/txtInputEmail"
            android:layout_width="@dimen/_0_sp"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_email_id"
            app:layout_constraintEnd_toEndOf="@id/guidelineE"
            app:layout_constraintStart_toStartOf="@id/guidelineS"
            app:layout_constraintTop_toBottomOf="@id/info"
            app:layout_constraintVertical_bias="0.2">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""
                android:text="@={viewModel.userName}" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputPass"
            android:layout_width="@dimen/_0_sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:hint="@string/please_enter_password"
            app:layout_constraintEnd_toEndOf="@id/guidelineE"
            app:layout_constraintStart_toStartOf="@id/guidelineS"
            app:layout_constraintTop_toBottomOf="@id/txtInputEmail"
            app:layout_constraintVertical_bias="0.2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint=""
                android:text="@={viewModel.password}" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in"
            android:visibility="@{!viewModel.loading?View.VISIBLE:View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/guidelineS"
            app:layout_constraintTop_toBottomOf="@+id/txtInputPass"
            app:layout_constraintVertical_bias="0.1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:text="Register"
            android:visibility="@{!viewModel.loading?View.VISIBLE:View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineE"
            app:layout_constraintTop_toBottomOf="@+id/txtInputPass"
            app:layout_constraintVertical_bias="0.1" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{viewModel.loading?View.VISIBLE:View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="@id/login"
            app:layout_constraintEnd_toEndOf="@+id/guidelineE"
            app:layout_constraintStart_toStartOf="@+id/guidelineS"
            app:layout_constraintTop_toTopOf="@id/login"
           />

        <ImageView
            android:id="@+id/image"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_width="@dimen/_0_sp"
            android:layout_height="@dimen/_0_sp"
            android:src="@drawable/bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/kotlin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:padding="@dimen/_10dp"
            android:text="@string/_30_days_kotlin"
            android:textSize="@dimen/_17sp"
            app:layout_constraintBottom_toBottomOf="@id/image"
            app:layout_constraintEnd_toEndOf="@id/image"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="@id/image"
            app:layout_constraintTop_toTopOf="@id/image"
            app:layout_constraintVertical_bias="0.146" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>